--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "DataLens Pro",
+  "name": "Qbitrix DataLens",
   "short_name": "DataLens",
   "start_url": "/index.html",
   "display": "standalone",
